# USB_Quartermaster_client

./: .gitignore  pyproject.toml
USB_Quartermaster_client/: __main__.py  app.py
quartermaster_client/: __main__.py
quartermaster_client/client/: app.py
tests/: test_usb_quartermaster_client.py
