[tool.poetry]
name = "USB_Quartermaster_client"
version = "0.1.0"
description = "Client to connect USB devices managed by Quartermaster Server"
authors = ["Tim Laurence <timdaman@gmail.com>"]
packages = [
    {include = "quartermaster_client"}
]

[tool.poetry.scripts]
quartermaster_client = 'USB_Quartermaster_client.__main__:run'

[tool.poetry.dependencies]
python = "^3.7"
usb-quartermaster-common = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
